# gst-plugins-rs

./: Cargo.toml  meson.build  meson_options.txt
net/remotecontrol/: Cargo.toml
net/remotecontrol/src/: lib.rs
net/remotecontrol/src/remotecontrol/: imp.rs  mod.rs
net/webrtc/: Cargo.toml
net/webrtc/src/webrtcsink/: imp.rs  mod.rs  remotecontrol.rs
