[package]
name = "gst-plugin-remotecontrol"
version.workspace = true
edition.workspace = true
authors = ["Peter Romianowski <pero@cling.com>"]
license = "MPL-2.0"
description = "GStreamer plugin for controlling a desktop using GstNavigation events"
repository.workspace = true
rust-version.workspace = true

[dependencies]
gst.workspace = true
gst-base.workspace = true
once_cell.workspace = true
gst-video = { workspace = true, features = ["v1_24", "serde"] }
enigo = "0.2.1"

[lib]
name = "gstremotecontrol"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[build-dependencies]
gst-plugin-version-helper.workspace = true

[features]
static = []
capi = []
doc = ["gst/v1_18"]

[package.metadata.capi]
min_version = "0.9.21"

[package.metadata.capi.header]
enabled = false

[package.metadata.capi.library]
install_subdir = "gstreamer-1.0"
versioning = false
import_library = false

[package.metadata.capi.pkg_config]
requires_private = "gstreamer-1.0, gstreamer-base-1.0, gobject-2.0, glib-2.0, gmodule-2.0"

